# charts

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  ct.yaml  devenv.nix  devenv.yaml  flake.nix  index.html  index.yaml  justfile  renovate.json
.devenv/: nix-eval-cache.db
.github/workflows/: build-images.yaml  build-pg-duckdb-image.yaml  release.yaml  test.yaml
charts/api-docs/: Chart.yaml  README.md  values.yaml
charts/cloudflare-gateway/: Chart.yaml  values.yaml
charts/cloudflare-ingress/: Chart.yaml  values.yaml
charts/common/: Chart.yaml  README.md
charts/docmost/: Chart.yaml  README.md  values.yaml
charts/dozzle/: Chart.yaml  README.md  values.yaml
charts/homepage/: Chart.yaml  README.md  values.yaml
charts/kan/: Chart.yaml  README.md  values.yaml
charts/lakehouse/: Chart.yaml  README.md  values.yaml
charts/litestream/: Chart.yaml
charts/nginx-s3-gateway/: Chart.yaml  README.md  values.yaml
charts/pg-duckdb/: Chart.yaml  values.yaml
charts/pgbackweb/: Chart.yaml  values.yaml
charts/pgweb/: Chart.yaml  README.md  values.yaml
charts/pipelines/: Chart.yaml  README.md  values.yaml
charts/system-upgrade-controller/: Chart.yaml  README.md  values.yaml
charts/vardis-common/: Chart.yaml  README.md  values.yaml
images/iceberg-maintenance/: .coverage  .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
images/iceberg-maintenance/maintenance/: iceberg.py
images/iceberg-maintenance/tests/: conftest.py  test_iceberg.py
images/pg-duckdb/: Dockerfile
scripts/: index.html.j2  index.py
(+222 files in other folders)
