[project]
name = "iceberg-maintenance"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pyiceberg[s3,nessie]>=0.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[dependency-groups]
dev = ["ruff>=0.11.0"]
