[project]
name = "iceberg-maintenance"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pyiceberg[s3,nessie]>=0.9.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "loguru>=0.7.0",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.14"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportAny = false
reportArgumentType = false

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
extend-exclude = ["template"]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "LOG",
  "N",
  "PERF",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "PLR0913"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["ruff>=0.11.0", "pytest>=8.0", "types-mock>=5.0", "pytest-cov>=6.0"]
